--- a/views/base.hbs
+++ b/views/base.hbs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <title>base page</title>
+    <link href="style.css" rel="stylesheet">
   </head>
 </head>
 <body>
 
-{{!-- Navigation links --}}
     <nav>
         <h4>Node MySQL Login</h4>
         <ul>
@@ -16,6 +16,5 @@
         </ul>
     </nav>
 
-    {{!-- Body of each page will go here --}}
 </body>
 </html>
