--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <title>Register page</title>
+    <link href="style.css" rel="stylesheet">
+
   </head>
 </head>
 <body>
