--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,7 +21,7 @@
         <div class="card" style="width: 18rem;">            
             <div class="card-header">Register</div>    
             <div class="card-body">
-                <form action="/auth/register" method="POST">
+                <form action="/register" method="POST">
                     <div class="mb-3">
                         <label for="name-reg" class="form-label">Name</label>
                         <input type="text" class="form-control" id="name-reg" name="name">                        
